# esp32-s3-watch

./: CMakeLists.txt  README.md  build.sh  idf_component.yml  sdkconfig  sdkconfig.old
docs/hardware/: PINOUT.md
flash_package/: README.md  flash_linux.sh  flash_windows.bat
include/: bluetooth.h  board_config.h  display.h  input.h  watch_face.h  wifi.h
main/: CMakeLists.txt  bluetooth.c  display.c  hw_test.c  hw_test.h  input.c  lvgl_port.c  lvgl_port.h  main.c  touch.c  touch.h  touch_cst816.c  touch_cst816.h  wifi.c
main/comfort/: breathing.c  breathing.h  emergency.c  emergency.h  messages.c
src/: bluetooth.c  display.c  input.c  watch_face.c
