# Main component CMakeLists.txt
idf_component_register(
    SRCS 
        "main.c"
        "display.c"
        "watch_face.c"
        "input.c"
        "wifi.c"
        "bluetooth.c"
    INCLUDE_DIRS 
        "../include"
    REQUIRES
        driver
        esp_wifi
        nvs_flash
        lwip
        freertos
        esp_common
        esp_hw_support
        esp_netif
)
